agressive compilation